# trailistenics-app

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  IDEES-FEATURES.md  README.md  docker-compose.yml  render.yaml
.claude/: launch.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_users.py  0003_drop_users.py  0004_programs.py  0005_user_progress.py  0006_user_intake.py  0007_fix_program_uniques.py
backend/app/: config.py  database.py  import_program.py  main.py  notifications.py  security.py  seed.py
backend/app/models/: __init__.py  bloc.py  exercise.py  program.py  user.py  user_intake.py  user_progress.py  week.py
backend/app/routers/: admin.py  auth.py  blocs.py  exercises.py  intake.py  notify.py  program.py  progress.py  weeks.py
backend/app/schemas/: __init__.py  auth.py  bloc.py  exercise.py  program.py  week.py
docs/: README.md
docs/intake/: profil-coureur.md
docs/integrations/: garmin.md  strava.md
docs/methodologie/: 01-trail-periodisation.md  02-calisthenie-bas-du-corps.md  03-hybride-trail-calisthenie.md
docs/modele-donnees/: contrat-de-sortie.md  exemple-programme-740.json  schema-programme.json
docs/prompts/: 00-pipeline-orchestration.md  01-generation-trail.md  02-generation-calisthenie-bas-corps.md  03-generation-hybride.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
plan/: plan_trail_descriptif.md  plan_trail_interactif.html
(+56 files in other folders)
